<resources>
    <string name="app_name">AndroidApp1</string>
    <string name="titulo">Seja bem-vindo!</string>
    <string name="subTitulo">Por favor digite seu nome</string>
    <string name="layoutNome">nome</string>
    <string name="botao">ENTRAR</string>
    <string name="recepcao">Seja bem-vindo,</string>
    <string name="enunciadoHome">Insira o nome na lista</string>
    <string name="btnHome">ENVIAR</string>
    <string name="Lista">Lista de Nomes</string>
</resources>