<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/trocaTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/thumb"
        app:track="@drawable/tack"
        android:layout_gravity="end"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/green"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subTitulo"
        style="@style/TextColor"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp"/>

    <EditText
        android:id="@+id/nomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome"
        android:fontFamily="sans-serif-condensed"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="181dp"
        android:text="@string/botao"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"/>

</LinearLayout>