<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/recepcao"
            android:textAlignment="textEnd"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/nomeLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/green"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="35dp"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enunciadoHome"
        style="@style/TextColor"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/nomeLista"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="Nome" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHome"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lista"
        style="@style/TextColor"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="25sp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextColor"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/tvName">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"/>

    </LinearLayout>

</LinearLayout>